@@ -65,7 +65,7 @@ public class BaseTestDHInterop extends BaseTestInterop {
 
     public void testDH() throws Exception {
 
-        String idString = (new Integer(this.keySize)).toString();
+        String idString = (Integer.valueOf(this.keySize)).toString();
 
         DHParameterSpec dhps = generateDHParameters(this.keySize);
 
@@ -367,7 +367,7 @@ public class BaseTestDHInterop extends BaseTestInterop {
                 providerName);
         algParamGen.init(size);
         AlgorithmParameters algParams = algParamGen.generateParameters();
-        DHParameterSpec dhps = (DHParameterSpec) algParams.getParameterSpec(DHParameterSpec.class);
+        DHParameterSpec dhps = algParams.getParameterSpec(DHParameterSpec.class);
         return dhps;
 
     }
